# rust-rest-api

./: Cargo.toml  README.md
data/: movies.json
src/: bin.rs  lib.rs
src/db/: mod.rs
src/model/: mod.rs
